css fixing the squished vote buttons

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -150,10 +150,10 @@ h2 {
 .playlist-item .vote {
   float: right;
   /*font-family: 'Londrina Shadow';*/
-  font-size: 25px;
+  font-size: 20px;
   height: 50px;
   text-align: center;
-  width: 50px;
+  width: 40px;
 }
 
 .playlist-item .vote:hover {
